# d2ssect

./: .gitignore  README.md  alignment_free_tool_workflow.sh  d2ssect.py  pyproject.toml  setup.py  test.py
.github/envs/: d2ssect.yml
.github/workflows/: conda.yml  linux.yml  macos.yml  run_test_py.yml  run_test_v0.yml  run_v0.yml  test_workflow.yml
alignment-free-tools/: Calculate_D2S.py  D2S_tools_py3.py  run_v0.1.sh
bak/d2ssect/: jellyfish.py
bak/v1/: main.py  utils.py
d2ssect/: __init__.py  __main__.py  jellyfish.cpp  jellyfish.py  main.py  utils.py
data/: d2s_pipeline_origin.sh  d2s_pipeline_origin.sh.o35643747  matrix.txt
data/d2s/: DI-1-1_S6-FI-2-21_S28.txt  DI-1-1_S6-MI-1-19_S9.txt  DI-1-1_S6-TAY_9_S28.txt  FI-2-21_S28-MI-1-19_S9.txt  FI-2-21_S28-TAY_9_S28.txt  MI-1-19_S9-TAY_9_S28.txt
data/fasta/: DI-1-1_S6.fasta  FI-2-21_S28.fasta  TAY_9_S28.fasta
data/jf/: DI-1-1_S6.jf  MI-1-19_S9.jf  TAY_9_S28.jf
data/nkz/: DI-1-1_S6.nkz  TAY_9_S28.nkz
tests/: test.bats  test.py  test_v0.bats  test_v0.sh  workflow_v0.sh
tests/alignment-free-tools/: Calculate_D2S_py3.py  Composition_of_InputSeqs_py3.py  Kmers_2_NumbericRepresentation_py3.py  alignment_free_tool_workflow.sh  phylip_amalg.py
tests/data/: makefq.sh  matrix.txt
tests/data/charfreq/: DI-1-1_S6.CharFreq  FI-2-21_S28.CharFreq  MI-1-19_S9.CharFreq  TAY_9_S28.CharFreq
tests/data/d2s/: DI-1-1_S6-FI-2-21_S28.txt  DI-1-1_S6-TAY_9_S28.txt  FI-2-21_S28-MI-1-19_S9.txt  FI-2-21_S28-TAY_9_S28.txt  (+1 more)
v0/: Calculate_D2S_py3.py  Composition_of_InputSeqs_py3.py  D2S_tools_py3.py  run_v0.sh  test_v0.sh
(+8 files in other folders)
